--- a/app/build.gradle
+++ b/app/build.gradle
@@ -113,5 +113,9 @@ dependencies {
 
     // optional - Paging 3 Integration
     implementation "androidx.room:room-paging:$room_version"
+    implementation("io.coil-kt:coil-compose:2.2.2")
+
+
+
 
 }
