--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,7 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
 
     implementation "androidx.compose.material3:material3:1.0.0-alpha02"
+    implementation 'androidx.compose.material:material:1.3.1'
     testImplementation 'junit:junit:4.13.2'
     // Retrofit
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
