--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,6 +83,8 @@ dependencies {
 
     implementation "androidx.navigation:navigation-compose:1.0.0-alpha01"
     implementation "com.google.accompanist:accompanist-navigation-animation:0.21.1-beta"
+    implementation 'com.google.code.gson:gson:2.8.9'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
 
 
