--- a/app/build.gradle
+++ b/app/build.gradle
@@ -118,6 +118,9 @@ dependencies {
     implementation "androidx.room:room-paging:$room_version"
     implementation("io.coil-kt:coil-compose:2.2.2")
 
+    implementation "androidx.navigation:navigation-compose:1.0.0-alpha01"
+    implementation "com.google.accompanist:accompanist-navigation-animation:0.21.1-beta"
+
 
 
 
